# slstatus-rs

./: Cargo.toml  README.md
src/: components.rs  config.rs  main.rs  utils.rs
src/components/: cpu.rs  datetime.rs  disk.rs  kernel_release.rs  net_speed.rs  ram.rs  volume.rs
