[package]
name = "slstatus-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = [ "derive", "string" ] }
alsa = { version = "0.9.1" }
libc = { version = "0.2.159" }
chrono = { version = "0.4.38" }
strfmt = { version = "0.2.4" }
interprocess = { version = "2.2.1" }
